--- a/src/style.css
+++ b/src/style.css
@@ -6,34 +6,37 @@ html {
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
+  height: 100%;
 }
 
 body {
   width: 100vw;
+  height: 100%;
   margin: 0;
   font-family: "Open Sans", "sans-serif";
+  display: flex;
+  flex-direction: column;
 }
 
 #header {
+  /*
   background-color: black;
   opacity: 0.8;
+  */
+  background-color: rgba(0, 0, 0, 0.7);
   color: white;
   font-size: 50px;
-  height: 15vh;
-  border: white 2px solid;
+  height: 10vh;
+  border-bottom: white 2px solid;
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
-#header-text {
-  border: white 2px solid;
-}
-
 #buttons {
   position: absolute;
   right: 5vw;
-  height: 7vh;
+  height: 5vh;
   width: 25%;
   display: flex;
   justify-content: space-between;
@@ -49,4 +52,47 @@ body {
   padding: 0;
   border: none;
   background: none;
+}
+
+.selected {
+  border-bottom: 3px solid white !important;
+}
+
+#home {
+  background-color: rgba(0, 0, 0, 0.4);
+  flex-grow: 1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding-bottom: 5vh;
+}
+
+#home-text {
+  color: white;
+  text-shadow: 1px 1px 20px rgb(0, 0, 0);
+  line-height: 1.7;
+  font-size: 25px;
+  max-width: 800px;
+  height: 80%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+}
+
+#footer {
+  /*
+  background-color: black;
+  opacity: 0.4;
+  */
+  background-color: rgba(0, 0, 0, 0.5);
+  color: white;
+  height: 5vh;
+  border-top: white 2px solid;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  right: 0;
 }
