--- a/src/style.css
+++ b/src/style.css
@@ -19,10 +19,6 @@ body {
 }
 
 #header {
-  /*
-  background-color: black;
-  opacity: 0.8;
-  */
   background-color: rgba(0, 0, 0, 0.7);
   color: white;
   font-size: 50px;
@@ -79,11 +75,28 @@ body {
   justify-content: space-evenly;
 }
 
+#about {
+  background-color: rgba(0, 0, 0, 0.4);
+  flex-grow: 1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding-bottom: 5vh;
+}
+
+#about-text {
+  color: white;
+  text-shadow: 1px 1px 20px rgb(0, 0, 0);
+  line-height: 1.7;
+  font-size: 25px;
+  max-width: 800px;
+  height: 80%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+}
+
 #footer {
-  /*
-  background-color: black;
-  opacity: 0.4;
-  */
   background-color: rgba(0, 0, 0, 0.5);
   color: white;
   height: 5vh;
