--- a/src/style.css
+++ b/src/style.css
@@ -75,6 +75,33 @@ body {
   justify-content: space-evenly;
 }
 
+#planets {
+  background-color: rgba(0, 0, 0, 0.4);
+  flex-grow: 1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  /* padding-bottom: 5vh; */
+  padding: 5vh 5vw;
+}
+
+.planet {
+}
+
+/*
+#planets-text {
+  color: white;
+  text-shadow: 1px 1px 20px rgb(0, 0, 0);
+  line-height: 1.7;
+  font-size: 25px;
+  max-width: 800px;
+  height: 80%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+}
+*/
+
 #about {
   background-color: rgba(0, 0, 0, 0.4);
   flex-grow: 1;
