--- a/src/style.css
+++ b/src/style.css
@@ -13,6 +13,7 @@ body {
   width: 100vw;
   height: 100%;
   margin: 0;
+  padding: 0;
   font-family: "Open Sans", "sans-serif";
   display: flex;
   flex-direction: column;
@@ -77,30 +78,38 @@ body {
 
 #planets {
   background-color: rgba(0, 0, 0, 0.4);
-  flex-grow: 1;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  /* padding-bottom: 5vh; */
-  padding: 5vh 5vw;
+  /* flex-grow: 1; */
+  height: 85vh;
+  padding: 5vh min(5vw, 70px) 7vh;
+  box-sizing: border-box;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  grid-gap: 25px;
+  overflow-y: auto;
 }
 
 .planet {
+  width: 100%;
+  padding: 15px;
+  box-sizing: border-box;
+  background-color: rgba(0, 0, 0, 0.5);
+  color: white;
+  text-shadow: 1px 1px 5px rgb(0, 0, 0);
+  border-radius: 15px;
+  border: solid white 2px;
+  display: grid;
+  grid-template-rows: auto auto 1fr;
+  text-align: center;
 }
 
-/*
-#planets-text {
-  color: white;
-  text-shadow: 1px 1px 20px rgb(0, 0, 0);
-  line-height: 1.7;
-  font-size: 25px;
-  max-width: 800px;
-  height: 80%;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-evenly;
+.planet img {
+  max-width: 100%;
+  max-height: 100%;
+  object-fit: contain;
+  margin-bottom: 10px;
+  justify-self: center;
+  align-self: center;
 }
-*/
 
 #about {
   background-color: rgba(0, 0, 0, 0.4);
@@ -124,7 +133,7 @@ body {
 }
 
 #footer {
-  background-color: rgba(0, 0, 0, 0.5);
+  background-color: rgba(0, 0, 0, 1);
   color: white;
   height: 5vh;
   border-top: white 2px solid;
