--- a/src/style.css
+++ b/src/style.css
@@ -89,9 +89,7 @@ body {
 }
 
 .planet {
-  width: 100%;
   padding: 15px;
-  box-sizing: border-box;
   background-color: rgba(0, 0, 0, 0.5);
   color: white;
   text-shadow: 1px 1px 5px rgb(0, 0, 0);
@@ -102,13 +100,31 @@ body {
   text-align: center;
 }
 
+.image-container {
+  width: 100%;
+  height: 100%;
+  box-sizing: border-box;
+  position: relative;
+}
+
 .planet img {
   max-width: 100%;
   max-height: 100%;
-  object-fit: contain;
-  margin-bottom: 10px;
-  justify-self: center;
-  align-self: center;
+
+  z-index: 1;
+}
+
+.planet img.outline {
+  opacity: 0;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 0;
+  transition: opacity 0.5s ease-in-out;
+}
+
+.planet:hover img.outline {
+  opacity: 1;
 }
 
 #about {
