--- a/src/style.css
+++ b/src/style.css
@@ -78,7 +78,6 @@ body {
 
 #planets {
   background-color: rgba(0, 0, 0, 0.4);
-  /* flex-grow: 1; */
   height: 85vh;
   padding: 5vh min(5vw, 70px) 7vh;
   box-sizing: border-box;
@@ -110,16 +109,15 @@ body {
 .planet img {
   max-width: 100%;
   max-height: 100%;
-
   z-index: 1;
 }
 
 .planet img.outline {
-  opacity: 0;
   position: absolute;
   top: 0;
   left: 0;
   z-index: 0;
+  opacity: 0;
   transition: opacity 0.5s ease-in-out;
 }
 
@@ -160,4 +158,26 @@ body {
   bottom: 0;
   left: 0;
   right: 0;
+}
+
+/* Scrollbars for Chrome / Edge / Safari */
+#planets::-webkit-scrollbar {
+  width: 3px;
+}
+
+#planets::-webkit-scrollbar-track {
+  background: transparent;
+  margin: 7px;
+}
+
+#planets::-webkit-scrollbar-thumb {
+  background-color: white;
+  border-radius: 20px;
+  border: 6px solid transparent;
+}
+
+/* Scrollbars for Firefox */
+body {
+  scrollbar-width: thin;
+  scrollbar-color: white transparent;
 }
